--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@ app.*.map.json
 
 # Environment variables
 .env
+
+# Firebase configuration
+google-services.json
+GoogleService-Info.plist
+firebase_options.dart
