--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   hive_flutter: ^1.1.0 
   syncfusion_flutter_charts: ^29.1.38
   intl: ^0.19.0
+  path_provider: ^2.1.5
  
 dev_dependencies:
   flutter_test:
