--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   cloud_firestore: ^5.6.6
   firebase_auth: ^5.5.2
   firebase_storage: ^12.4.5 
-  google_sign_in: ^6.3.0
+  google_sign_in: ^6.3.0 
   go_router: ^14.8.1
   font_awesome_flutter: ^10.8.0
   flutter_dotenv: ^5.2.1 
@@ -26,6 +26,7 @@ dependencies:
   syncfusion_flutter_charts: ^29.1.38
   intl: ^0.19.0
   path_provider: ^2.1.5
+  collection: ^1.19.1
  
 dev_dependencies:
   flutter_test:
@@ -38,5 +39,8 @@ flutter:
   assets:
     - assets/
     - assets/kpss.json
+    - assets/lesson_links.json
+    - assets/topics_questions.json
+    - assets/lesson_topics.json
     - .env 
  
