--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   intl: ^0.19.0
   path_provider: ^2.1.5
   collection: ^1.19.1
+  webview_flutter: ^4.11.0 
  
 dev_dependencies:
   flutter_test:
