Integrate Firebase Database for daily goal management; add DailyGoal model and GoalsService for handling user goals. Update user data retrieval methods to support new goal features and enhance home page with DailyGoalsWidget for displaying progress. Refactor user service and app user model for improved data handling.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   collection: ^1.19.1
   webview_flutter: ^4.11.0 
   html: ^0.15.6
+  firebase_database: ^11.3.5
  
 dev_dependencies:
   flutter_test:
