--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = osym
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.dh.kpss.ai.assistant
+PRODUCT_BUNDLE_IDENTIFIER = com.dh.yks.assistant.ai
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
