--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: osym
-description: "A new Flutter project."
+name: ykasistan
+description: "YKS Asistan AI - Üniversite sınavına hazırlık uygulaması."
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.1.1+2
 
 environment:
   sdk: ^3.7.2
@@ -30,11 +30,42 @@ dependencies:
   webview_flutter: ^4.11.0 
   html: ^0.15.6
   firebase_database: ^11.3.5
+  flutter_native_splash: ^2.4.6
  
 dev_dependencies:
   flutter_test:
     sdk: flutter 
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1 
+
+flutter_native_splash:
+  color: "#ffffff" 
+  image: assets/app_logo.png
+  android: true
+  ios: true
+  web: false
+  image_dark: assets/app_logo.png
+  android_gravity: center
+  ios_content_mode: center
+  fullscreen: true
+  android_12:
+    image: assets/app_logo.png
+    icon_background_color: "#ffffff"
+    image_dark: assets/app_logo.png
+    icon_background_color_dark: "#ffffff"
+
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/app_logo.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
+  web:
+    generate: false
+  windows:
+    generate: false
+  macos:
+    generate: false
 
 flutter:
   uses-material-design: true
