--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ google-services.json
 GoogleService-Info.plist
 firebase_options.dart
 firebase_credentials.json
+exam-mentor-firebase-adminsdk.json
+questions/
