Update version to 1.1.3+3 in pubspec.yaml. Refactor authentication flow in auth_page.dart by removing debug print statements and commenting out the anonymous sign-in method. Introduce CheatSheetsPage for displaying categorized cheat sheets, along with associated services and widgets for improved user experience. Enhance daily goal management by integrating new EditGoalWidget and updating GoalsService for better goal handling. Implement filtering functionality in statistics and cheat sheets pages for improved data visualization.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   html: ^0.15.6
   firebase_database: ^11.3.5
   flutter_native_splash: ^2.4.6
+  file_picker: ^10.1.9
  
 dev_dependencies:
   flutter_test:
