Add Google Mobile Ads integration and update Firebase hosting configuration
- Implemented Google Mobile Ads SDK for banner and interstitial ads.
- Created AdService for centralized ad management and loading.
- Added BannerAdWidget and InterstitialAdHelper for ad display functionality.
- Updated AndroidManifest.xml and Info.plist for AdMob configuration.
- Added hosting configuration in firebase.json for the developer website.
- Updated README.md and added implementation summary and privacy policy documents.

--- a/firebase.json
+++ b/firebase.json
@@ -27,5 +27,14 @@
                 }
             }
         }
+    },
+    "hosting": {
+        "site": "yks-asistan",
+        "public": "developer_web_site",
+        "ignore": [
+            "firebase.json",
+            "**/.*",
+            "**/node_modules/**"
+        ]
     }
 }
