--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,7 +30,15 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <!-- AdMob App ID -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-5309874269430815~9068794476" />
     </application>
+    <!-- Add the INTERNET permission -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Required for advertising ID access on Android 13+ -->
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
          https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
