--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: yksasistan
-description: "YKS Asistan AI - Üniversite sınavına hazırlık uygulaması."
+description: "YKS Asistan - Üniversite sınavına hazırlık uygulaması."
 publish_to: 'none'
 
-version: 1.1.5+5
+version: 1.1.7+7
 
 environment:
   sdk: ^3.7.2
@@ -32,6 +32,7 @@ dependencies:
   firebase_database: ^11.3.5
   flutter_native_splash: ^2.4.6
   file_picker: ^10.1.9
+  google_mobile_ads: ^6.0.0
  
 dev_dependencies:
   flutter_test:
