Integrate notification functionality and update dependencies
- Added NotificationService for managing local notifications.
- Integrated flutter_local_notifications package for scheduling daily goal reminders.
- Updated pubspec.yaml to include flutter_local_notifications and timezone dependencies.
- Modified AndroidManifest.xml to include necessary permissions and receivers for notifications.
- Refactored GoalsService to schedule notifications based on daily goals.
- Updated main.dart to initialize notifications and handle app lifecycle events for rescheduling reminders.
- Adjusted various widgets to support new notification features.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,11 +34,30 @@
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-5309874269430815~9068794476" />
+        <!-- Receiver for scheduling alarms -->
+        <receiver
+            android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
+        <receiver
+            android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
+            </intent-filter>
+        </receiver>
     </application>
     <!-- Add the INTERNET permission -->
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- Required for advertising ID access on Android 13+ -->
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
+    <!-- Notification permissions -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
          https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
