--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_native_splash: ^2.4.6
   file_picker: ^10.1.9
   google_mobile_ads: ^6.0.0
+  flutter_local_notifications: ^19.2.1
+  timezone: ^0.10.1
  
 dev_dependencies:
   flutter_test:
