Update app branding by changing all instances of "YKS Asistan AI" to "YKS Asistan". Increment version number to 1.2.0+10 in pubspec.yaml. Enhance privacy policy documentation for clarity on data collection practices.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="YKS Asistan AI"
+        android:label="YKS Asistan"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
