--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: yksasistan
 description: "YKS Asistan - Üniversite sınavına hazırlık uygulaması."
 publish_to: 'none'
 
-version: 1.2.0+10
+version: 1.2.2+12
 
 environment:
   sdk: ^3.7.2
@@ -35,7 +35,8 @@ dependencies:
   google_mobile_ads: ^6.0.0
   flutter_local_notifications: ^19.2.1
   timezone: ^0.10.1
- 
+  in_app_purchase: ^3.2.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter 
